--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,9 @@
 .nav-link:focus {
     color: #2196F3;
 }
+.active {
+    color:#2196F3;
+}
 .info-link {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
@@ -66,6 +69,8 @@
   color: #ffffff;
   background-color: #2196F3;
   cursor: pointer;
+  border-radius: 4px;
+  border: none;
 }
 .modal-btn:hover,
 .modal-btn {
@@ -109,6 +114,9 @@
 /*=== END SERVICES===*/
 
 /*=== MASTERS===*/
+.masters {
+    background: #F5F4FA;
+}
 .work-name {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
@@ -160,4 +168,44 @@
 }
 .contacts-info {
     color: rgba(225, 225, 225, 0.6);
+}
+/*===END CONTACTS===*/
+
+/*===========PORTFOLIO===============*/
+/*===MENU===*/
+.btn-menu {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  cursor: pointer;
+  color: #212121;
+  background-color: #F5F4FA;
+  border-radius: 4px;
+  border: none;
+}
+.btn-menu:hover {
+    color: #ffffff;
+    background-color: #2196F3;
+}
+/*===END MENU===*/
+
+/*===PORTFOLIO===*/
+.site-name {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2,25;
+    letter-spacing: 0.06em;
+    font-style: normal;
+    color: #212121; 
+}
+.preview-name {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1,87;
+    letter-spacing: 0.03em;
+    font-style: normal;
+    color: #757575; 
 }
