--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
 }
 .logo {
     color: #000000;
-    font-family:  'Roboto', sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 26px;
     line-height: 1,19;
@@ -143,7 +143,7 @@
 }
 .logo-color {
     color: #2196F3;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 26px;
     line-height: 1,19;
@@ -151,7 +151,7 @@
 }
 .logo-contacts {
     color: #ffffff;
-    font-family:  'Roboto', sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 26px;
     line-height: 1,19;
